fix: do not allow words to break when text wrapping on event card

--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -196,7 +196,7 @@
   display: none;
 }
 
- .event-card {
+.event-card {
 position: relative;
 font-size: 12px;
 width: 100%;
@@ -204,9 +204,10 @@ max-width: 100%;
 margin: 1px 0 0 0;
 padding: 0 2px;
 justify-content: start;
-text-overflow: ellipsis;
-overflow: hidden;
-white-space: nowrap;
+overflow: visible;
+word-break: normal;
+white-space: normal;
+overflow-wrap: break-word;
 cursor: pointer;
 }
 
@@ -217,4 +218,8 @@ justify-content: center;
 align-items: center;
 height: 100%;
 max-width: 100%;
+white-space: normal;
+overflow: visible;
+word-break: normal;
+overflow-wrap: break-word;
 }
